ProyectoPT2/ProyectoPT2.java
/* Generated By:JavaCC: Do not edit this line. ProyectoPT2.java */
        public class ProyectoPT2 implements ProyectoPT2Constants {
                public static void main (String[] args) throws ParseException{
                ProyectoPT2 anLex = new ProyectoPT2(System.in);
                anLex.unaExpresion();
                }

  static final public void unaExpresion() throws ParseException {
    Program();
  }

  static final public void Program() throws ParseException {
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case VOID:
      case INT:
      case FLOAT:
      case STRING:
      case BOOL:
      case BOOLEAN:
      case DEF:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case VOID:
      case INT:
      case FLOAT:
      case STRING:
      case BOOL:
      case BOOLEAN:
        Var();
        break;
      case DEF:
        Func();
        break;
      default:
        jj_la1[1] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  static final public void Var() throws ParseException {
    Type();
    jj_consume_token(ID);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case CORCHETE_IZQ:
      jj_consume_token(CORCHETE_IZQ);
      jj_consume_token(NUMERO_INT);
      jj_consume_token(CORCHETE_DER);
      break;
    default:
      jj_la1[2] = jj_gen;
      ;
    }
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMA:
        ;
        break;
      default:
        jj_la1[3] = jj_gen;
        break label_2;
      }
      jj_consume_token(COMA);
      jj_consume_token(ID);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CORCHETE_IZQ:
        jj_consume_token(CORCHETE_IZQ);
        jj_consume_token(NUMERO_INT);
        jj_consume_token(CORCHETE_DER);
        break;
      default:
        jj_la1[4] = jj_gen;
        ;
      }
    }
    jj_consume_token(PUNTO_COMA);
  }

  static final public void Type() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INT:
      jj_consume_token(INT);
      break;
    case FLOAT:
      jj_consume_token(FLOAT);
      break;
    case BOOL:
      jj_consume_token(BOOL);
      break;
    case VOID:
      jj_consume_token(VOID);
      break;
    case STRING:
      jj_consume_token(STRING);
      break;
    case BOOLEAN:
      jj_consume_token(BOOLEAN);
      break;
    default:
      jj_la1[5] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void Func() throws ParseException {
    jj_consume_token(DEF);
    Type();
    jj_consume_token(ID);
    jj_consume_token(PARENTESIS_IZQ);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case VOID:
    case INT:
    case FLOAT:
    case STRING:
    case BOOL:
    case BOOLEAN:
      Params();
      break;
    default:
      jj_la1[6] = jj_gen;
      ;
    }
    jj_consume_token(PARENTESIS_DER);
    Block();
  }

  static final public void Params() throws ParseException {
    Type();
    jj_consume_token(ID);
    label_3:
    while (true) {
      if (jj_2_1(2)) {
        ;
      } else {
        break label_3;
      }
      jj_consume_token(COMA);
      Type();
      jj_consume_token(ID);
    }
  }

  static final public void Block() throws ParseException {
    jj_consume_token(LLAVE_IZQ);
    label_4:
    while (true) {
      if (jj_2_2(2)) {
        ;
      } else {
        break label_4;
      }
      Var();
    }
    label_5:
    while (true) {
      if (jj_2_3(2)) {
        ;
      } else {
        break label_5;
      }
      Stmt();
    }
    jj_consume_token(LLAVE_DER);
  }

  static final public void Stmt() throws ParseException {
    if (jj_2_4(2)) {
      Loc();
      jj_consume_token(IGUAL);
      Expr();
      jj_consume_token(PUNTO_COMA);
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ID:
        FuncCall();
        jj_consume_token(PUNTO_COMA);
        break;
      case IF:
        jj_consume_token(IF);
        jj_consume_token(PARENTESIS_IZQ);
        Expr();
        jj_consume_token(PARENTESIS_DER);
        Block();
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case ELSE:
          jj_consume_token(ELSE);
          Block();
          break;
        default:
          jj_la1[7] = jj_gen;
          ;
        }
        break;
      case WHILE:
        jj_consume_token(WHILE);
        jj_consume_token(PARENTESIS_IZQ);
        Expr();
        jj_consume_token(PARENTESIS_DER);
        Block();
        break;
      case RETURN:
        jj_consume_token(RETURN);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case PARENTESIS_IZQ:
        case RESTA:
        case EXCLAMACION:
        case TRUE:
        case FALSE:
        case ID:
        case NUMERO_FLOAT:
        case NUMERO_INT:
        case NUMERO_HEX:
        case CADENA:
          Expr();
          break;
        default:
          jj_la1[8] = jj_gen;
          ;
        }
        jj_consume_token(PUNTO_COMA);
        break;
      case BREAK:
        jj_consume_token(BREAK);
        jj_consume_token(PUNTO_COMA);
        break;
      case CONTINUE:
        jj_consume_token(CONTINUE);
        jj_consume_token(PUNTO_COMA);
        break;
      default:
        jj_la1[9] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  static final public void Expr() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case RESTA:
    case EXCLAMACION:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case RESTA:
        jj_consume_token(RESTA);
        break;
      case EXCLAMACION:
        jj_consume_token(EXCLAMACION);
        break;
      default:
        jj_la1[10] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      BaseExpr();
      ExprP();
      break;
    case PARENTESIS_IZQ:
    case TRUE:
    case FALSE:
    case ID:
    case NUMERO_FLOAT:
    case NUMERO_INT:
    case NUMERO_HEX:
    case CADENA:
      BaseExpr();
      ExprP();
      break;
    default:
      jj_la1[11] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void ExprP() throws ParseException {
    label_6:
    while (true) {
      if (jj_2_5(2)) {
        ;
      } else {
        break label_6;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SUMA:
        jj_consume_token(SUMA);
        break;
      case RESTA:
        jj_consume_token(RESTA);
        break;
      case MULTIPLICACION:
        jj_consume_token(MULTIPLICACION);
        break;
      case DIVISION:
        jj_consume_token(DIVISION);
        break;
      case MODULO:
        jj_consume_token(MODULO);
        break;
      case MENOR_QUE:
        jj_consume_token(MENOR_QUE);
        break;
      case MENOR_IGUAL_QUE:
        jj_consume_token(MENOR_IGUAL_QUE);
        break;
      case MAYOR_QUE:
        jj_consume_token(MAYOR_QUE);
        break;
      case MAYOR_IGUAL_QUE:
        jj_consume_token(MAYOR_IGUAL_QUE);
        break;
      case IGUAL_IGUAL:
        jj_consume_token(IGUAL_IGUAL);
        break;
      case DISTINTO:
        jj_consume_token(DISTINTO);
        break;
      case AND:
        jj_consume_token(AND);
        break;
      case OR:
        jj_consume_token(OR);
        break;
      case IGUAL:
        jj_consume_token(IGUAL);
        break;
      default:
        jj_la1[12] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      Expr();
      ExprP();
    }
  }

  static final public void BaseExpr() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case PARENTESIS_IZQ:
      jj_consume_token(PARENTESIS_IZQ);
      Expr();
      jj_consume_token(PARENTESIS_DER);
      break;
    default:
      jj_la1[13] = jj_gen;
      if (jj_2_6(2)) {
        FuncCall();
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case ID:
          Loc();
          break;
        case TRUE:
        case FALSE:
        case NUMERO_FLOAT:
        case NUMERO_INT:
        case NUMERO_HEX:
        case CADENA:
          Lit();
          break;
        default:
          jj_la1[14] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
  }

  static final public void Loc() throws ParseException {
    jj_consume_token(ID);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case CORCHETE_IZQ:
      jj_consume_token(CORCHETE_IZQ);
      Expr();
      jj_consume_token(CORCHETE_DER);
      break;
    default:
      jj_la1[15] = jj_gen;
      ;
    }
  }

  static final public void FuncCall() throws ParseException {
    jj_consume_token(ID);
    jj_consume_token(PARENTESIS_IZQ);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case PARENTESIS_IZQ:
    case RESTA:
    case EXCLAMACION:
    case TRUE:
    case FALSE:
    case ID:
    case NUMERO_FLOAT:
    case NUMERO_INT:
    case NUMERO_HEX:
    case CADENA:
      Args();
      break;
    default:
      jj_la1[16] = jj_gen;
      ;
    }
    jj_consume_token(PARENTESIS_DER);
  }

  static final public void Args() throws ParseException {
    Expr();
    label_7:
    while (true) {
      if (jj_2_7(2)) {
        ;
      } else {
        break label_7;
      }
      jj_consume_token(COMA);
      Expr();
    }
  }

  static final public void Lit() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NUMERO_INT:
      jj_consume_token(NUMERO_INT);
      break;
    case NUMERO_FLOAT:
      jj_consume_token(NUMERO_FLOAT);
      break;
    case NUMERO_HEX:
      jj_consume_token(NUMERO_HEX);
      break;
    case TRUE:
      jj_consume_token(TRUE);
      break;
    case FALSE:
      jj_consume_token(FALSE);
      break;
    case CADENA:
      jj_consume_token(CADENA);
      break;
    default:
      jj_la1[17] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  static private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  static private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  static private boolean jj_2_4(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  static private boolean jj_2_5(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  static private boolean jj_2_6(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_6(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  static private boolean jj_2_7(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_7(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  static private boolean jj_3R_22() {
    if (jj_3R_24()) return true;
    return false;
  }

  static private boolean jj_3R_23() {
    if (jj_3R_12()) return true;
    return false;
  }

  static private boolean jj_3R_21() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_scan_token(11)) {
    jj_scanpos = xsp;
    if (jj_scan_token(23)) return true;
    }
    return false;
  }

  static private boolean jj_3R_12() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_21()) {
    jj_scanpos = xsp;
    if (jj_3R_22()) return true;
    }
    return false;
  }

  static private boolean jj_3R_20() {
    if (jj_scan_token(CORCHETE_IZQ)) return true;
    return false;
  }

  static private boolean jj_3R_13() {
    if (jj_scan_token(ID)) return true;
    if (jj_scan_token(PARENTESIS_IZQ)) return true;
    return false;
  }

  static private boolean jj_3R_19() {
    if (jj_scan_token(CONTINUE)) return true;
    if (jj_scan_token(PUNTO_COMA)) return true;
    return false;
  }

  static private boolean jj_3R_18() {
    if (jj_scan_token(BREAK)) return true;
    if (jj_scan_token(PUNTO_COMA)) return true;
    return false;
  }

  static private boolean jj_3R_17() {
    if (jj_scan_token(RETURN)) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_23()) jj_scanpos = xsp;
    if (jj_scan_token(PUNTO_COMA)) return true;
    return false;
  }

  static private boolean jj_3R_11() {
    if (jj_scan_token(ID)) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_20()) jj_scanpos = xsp;
    return false;
  }

  static private boolean jj_3_2() {
    if (jj_3R_9()) return true;
    return false;
  }

  static private boolean jj_3R_16() {
    if (jj_scan_token(WHILE)) return true;
    if (jj_scan_token(PARENTESIS_IZQ)) return true;
    return false;
  }

  static private boolean jj_3R_15() {
    if (jj_scan_token(IF)) return true;
    if (jj_scan_token(PARENTESIS_IZQ)) return true;
    return false;
  }

  static private boolean jj_3R_27() {
    if (jj_3R_28()) return true;
    return false;
  }

  static private boolean jj_3R_14() {
    if (jj_3R_13()) return true;
    return false;
  }

  static private boolean jj_3R_26() {
    if (jj_3R_11()) return true;
    return false;
  }

  static private boolean jj_3_1() {
    if (jj_scan_token(COMA)) return true;
    if (jj_3R_8()) return true;
    return false;
  }

  static private boolean jj_3_4() {
    if (jj_3R_11()) return true;
    if (jj_scan_token(IGUAL)) return true;
    return false;
  }

  static private boolean jj_3R_10() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_4()) {
    jj_scanpos = xsp;
    if (jj_3R_14()) {
    jj_scanpos = xsp;
    if (jj_3R_15()) {
    jj_scanpos = xsp;
    if (jj_3R_16()) {
    jj_scanpos = xsp;
    if (jj_3R_17()) {
    jj_scanpos = xsp;
    if (jj_3R_18()) {
    jj_scanpos = xsp;
    if (jj_3R_19()) return true;
    }
    }
    }
    }
    }
    }
    return false;
  }

  static private boolean jj_3_6() {
    if (jj_3R_13()) return true;
    return false;
  }

  static private boolean jj_3R_25() {
    if (jj_scan_token(PARENTESIS_IZQ)) return true;
    return false;
  }

  static private boolean jj_3R_24() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_25()) {
    jj_scanpos = xsp;
    if (jj_3_6()) {
    jj_scanpos = xsp;
    if (jj_3R_26()) {
    jj_scanpos = xsp;
    if (jj_3R_27()) return true;
    }
    }
    }
    return false;
  }

  static private boolean jj_3R_8() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_scan_token(30)) {
    jj_scanpos = xsp;
    if (jj_scan_token(31)) {
    jj_scanpos = xsp;
    if (jj_scan_token(40)) {
    jj_scanpos = xsp;
    if (jj_scan_token(29)) {
    jj_scanpos = xsp;
    if (jj_scan_token(37)) {
    jj_scanpos = xsp;
    if (jj_scan_token(41)) return true;
    }
    }
    }
    }
    }
    return false;
  }

  static private boolean jj_3_3() {
    if (jj_3R_10()) return true;
    return false;
  }

  static private boolean jj_3_5() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_scan_token(10)) {
    jj_scanpos = xsp;
    if (jj_scan_token(11)) {
    jj_scanpos = xsp;
    if (jj_scan_token(12)) {
    jj_scanpos = xsp;
    if (jj_scan_token(13)) {
    jj_scanpos = xsp;
    if (jj_scan_token(14)) {
    jj_scanpos = xsp;
    if (jj_scan_token(15)) {
    jj_scanpos = xsp;
    if (jj_scan_token(17)) {
    jj_scanpos = xsp;
    if (jj_scan_token(16)) {
    jj_scanpos = xsp;
    if (jj_scan_token(18)) {
    jj_scanpos = xsp;
    if (jj_scan_token(19)) {
    jj_scanpos = xsp;
    if (jj_scan_token(20)) {
    jj_scanpos = xsp;
    if (jj_scan_token(21)) {
    jj_scanpos = xsp;
    if (jj_scan_token(22)) {
    jj_scanpos = xsp;
    if (jj_scan_token(9)) return true;
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    }
    if (jj_3R_12()) return true;
    return false;
  }

  static private boolean jj_3_7() {
    if (jj_scan_token(COMA)) return true;
    if (jj_3R_12()) return true;
    return false;
  }

  static private boolean jj_3R_28() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_scan_token(51)) {
    jj_scanpos = xsp;
    if (jj_scan_token(50)) {
    jj_scanpos = xsp;
    if (jj_scan_token(52)) {
    jj_scanpos = xsp;
    if (jj_scan_token(42)) {
    jj_scanpos = xsp;
    if (jj_scan_token(43)) {
    jj_scanpos = xsp;
    if (jj_scan_token(53)) return true;
    }
    }
    }
    }
    }
    return false;
  }

  static private boolean jj_3R_9() {
    if (jj_3R_8()) return true;
    if (jj_scan_token(ID)) return true;
    return false;
  }

  static private boolean jj_initialized_once = false;
  /** Generated Token Manager. */
  static public ProyectoPT2TokenManager token_source;
  static SimpleCharStream jj_input_stream;
  /** Current token. */
  static public Token token;
  /** Next token. */
  static public Token jj_nt;
  static private int jj_ntk;
  static private Token jj_scanpos, jj_lastpos;
  static private int jj_la;
  /** Whether we are looking ahead. */
  static private boolean jj_lookingAhead = false;
  static private boolean jj_semLA;
  static private int jj_gen;
  static final private int[] jj_la1 = new int[18];
  static private int[] jj_la1_0;
  static private int[] jj_la1_1;
  static private int[] jj_la1_2;
  static {
      jj_la1_init_0();
      jj_la1_init_1();
      jj_la1_init_2();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {0xe0000000,0xe0000000,0x2,0x80,0x2,0xe0000000,0xe0000000,0x0,0x800808,0x0,0x800800,0x800808,0x7ffe00,0x8,0x0,0x2,0x800808,0x0,};
   }
   private static void jj_la1_init_1() {
      jj_la1_1 = new int[] {0x2320,0x2320,0x0,0x0,0x0,0x320,0x320,0x2,0x3e0c00,0x2d009,0x0,0x3e0c00,0x0,0x0,0x3e0c00,0x0,0x3e0c00,0x3c0c00,};
   }
   private static void jj_la1_init_2() {
      jj_la1_2 = new int[] {0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,};
   }
  static final private JJCalls[] jj_2_rtns = new JJCalls[7];
  static private boolean jj_rescan = false;
  static private int jj_gc = 0;

  /** Constructor with InputStream. */
  public ProyectoPT2(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public ProyectoPT2(java.io.InputStream stream, String encoding) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser.  ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new ProyectoPT2TokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 18; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }
